--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>camel-direct</artifactId>
             <version>3.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-core</artifactId>
+            <version>3.7.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -33,7 +38,7 @@
             <version>3.7.0</version>
         </dependency>
         <dependency>
-            <groupId>javax.xml.bind</groupId>
+            <groupId>.javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency>
